# successat

./: AGENTS.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
src/successat/: cache.py  cli.py  datasets.py
src/successat/benchmarks/: __init__.py  base.py  gsm8k.py  humaneval.py  livebench.py  mmlu.py  runner.py  triviaqa.py
src/successat/llm/: __init__.py  clients.py
tests/: conftest.py
tests/integration/: test_benchmark_runner_live.py  test_benchmarks_end_to_end.py  test_benchmarks_live_end_to_end.py  test_live_llm_clients.py  test_llm_clients.py
tests/unit/: test_benchmark_base.py  test_benchmark_registry.py  test_benchmark_runner.py  test_cli.py  test_clients.py  test_datasets.py  test_livebench_benchmark.py  test_triviaqa_benchmark.py
tests/unit/benchmarks/: test_livebench.py
