[project]
name = "successat"
version = "0.1.0"
description = "Reusable benchmarking utilities for provider-agnostic LLM clients"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.30.0",
    "datasets>=4.0.0",
]
authors = [
    { name = "aplassard" },
    { name = "codex" },
]
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/aplassard/successat"
Repository = "https://github.com/aplassard/successat"

[project.scripts]
successat = "successat.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = [
    "src",
]
markers = [
    "integtest: marks tests that call real provider APIs",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4",
]
